--- a/src/style/global.css
+++ b/src/style/global.css
@@ -1,16 +1,70 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
 html{
+    font-family: 'Roboto', sans-serif;
     height: 100%;
     background-image: url(/src/assets/gradient.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
+    
+    -webkit-tap-highlight-color: transparent;
 }
 
-body,html{
+html,body{
     margin: 0;
     font-size: 16px;
 }
 
+body{
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+#content{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+}
+
+@media (min-width: 768px){
+    #content{
+        width: 768px;
+        transition: 0.15s
+    }
+}
+
+@media (min-width: 1366px){
+    #content{
+        width: 1366px;
+        transition: 0.15s
+    }
+}
+
 .hidden{
     display: none
+}
+
+::-webkit-scrollbar {
+    width: 14px;
+    height: 18px;
+}
+::-webkit-scrollbar-thumb {
+    height: 6px;
+    border: 4px solid rgba(0, 0, 0, 0);
+    background-clip: padding-box;
+    -webkit-border-radius: 7px;
+    background-color: rgba(0, 0, 0, 0.15);
+    -webkit-box-shadow: inset -1px -1px 0px rgba(0, 0, 0, 0.05), inset 1px 1px 0px rgba(0, 0, 0, 0.05);
+}
+::-webkit-scrollbar-button {
+    width: 0;
+    height: 0;
+    display: none;
+}
+::-webkit-scrollbar-corner {
+    background-color: transparent;
 }
