Addded a few improvemeents to the sidebar, the logout login ui is not prefect yet

--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -45,20 +45,20 @@
         margin: 20px;
         margin-top: 50%;
     }
-    input{
+    .input{
         font-size:16px;
     }
   
 }
 
 
-label{
+.label{
     margin: 30px;
     font-size: 20px;
     font-weight: 600;
 }
 
-input{
+.input{
     font-size: 16px;
     border: none;
     border-bottom: 1px solid #979797;
