--- a/src/style/global.css
+++ b/src/style/global.css
@@ -25,13 +25,13 @@ body{
 #content{
     width: 100%;
     height: 100%;
-    display: flex;
     flex-direction: row;
     align-items: stretch;
 }
 
 @media (min-width: 768px){
     #content{
+        display: flex !important;
         width: 768px;
         transition: 0.15s
     }
